--- a/index.html
+++ b/index.html
@@ -23,8 +23,12 @@
     <p>These are paragraph tags, and this is where text goes.</p>
 
     	<p> These are paragraph tags, and this is where text goes.</p> 
-    	<img src="https://jiyeonkang.files.wordpress.com/2015/10/boxoffice2015_3.jpg?w=1288">
+  
     	<p> Here's more about my final project, and here's a <a href="http://jiyeonkang.wordpress.com">link</a>
+
+        <img src=data1.png>
+        <img src=data2.png>
+        <img src=data3.png>
     </div>
 
 
