--- a/index.html
+++ b/index.html
@@ -4,31 +4,39 @@
 <head>
     <!-- This is the head, where I link to my stylesheets and can put other setup basics like a title or meta tags -->
   <meta charset="utf-8">
+    <link href='https://fonts.googleapis.com/css?family=Dosis:400,600,700' rel='stylesheet' type='text/css'>
 
   <title></title>
   <meta name="description" content="">
   <meta name="author" content="">
 
 <!-- This is how I link to my stylesheet, where I will write css -->
-  <link rel="stylesheet" href="stylesheet.css">
+  <link rel="stylesheet" href="style.css">
 
 </head>
 
 <body>
     <!-- This is the body of my website, where I write actual HTML -->
 
-    <h1>My Very Smart Data Visualization Final Project</h1>
+    <h1>The Daily Routines of Famous Creative People</h1>
     
- <div>
-    <p>These are paragraph tags, and this is where text goes.</p>
+ <div id="sentence">
 
-    	<p> These are paragraph tags, and this is where text goes.</p> 
-  
-    	<p> Here's more about my final project, and here's a <a href="http://jiyeonkang.wordpress.com">link</a>
+    	<p> <center>Here's more about my final project, and here's my blog link for the data visualization class : <a href="https://jiyeonkang.wordpress.com/category/parsons-mfa-dt/fall-2015-classes/data-visualization-and-information-aesthetics/">link</a></center> <br><br><br>
+</div>
 
-        <img src=data1.png>
-        <img src=data2.png>
-        <img src=data3.png>
+
+<div id="final">
+        <img id="final" src="final.jpg">
+<br><br><br><br><br>
+        <img src="data1.png" size="60%">
+        <br><br>
+
+
+
+        <img src="data2.png" size="60%">
+        <br><br>
+        <img src="data3.png">
     </div>
 
 
