--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 
 <div id="final">
-        <img id="final" src="final.jpg" size="60%">
+        <img id="final" src="final.jpg">
 <br><br><br><br><br>
         <img src="data1.png" size="60%">
         <br><br>
